// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivationDropdown render 0/2 completed 1`] = `
<div
  className="activation-dropdown-button--hidden nav-link p-0 btn-group"
  onKeyDown={[Function]}
>
  <a
    aria-expanded={false}
    aria-haspopup={true}
    className=" activation-dropdown-button__animated-button bg-transparent d-flex align-items-center e2e-activation-nav-item-toggle nav-link"
    href="#"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    />
    Setup
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    />
    <span
      className="activation-dropdown-button__progress-bar-container"
    >
      <svg
        className="CircularProgressbar activation-dropdown-button__circular-progress-bar"
        style={Object {}}
        viewBox="0 0 100 100"
      >
        <path
          className="CircularProgressbar-trail"
          d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
          fillOpacity={0}
          strokeWidth={12}
          style={Object {}}
        />
        <path
          className="CircularProgressbar-path"
          d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
          fillOpacity={0}
          strokeWidth={12}
          style={
            Object {
              "strokeDasharray": "276.46015351590177px 276.46015351590177px",
              "strokeDashoffset": "NaNpx",
            }
          }
        />
      </svg>
    </span>
  </a>
  <div
    aria-hidden={true}
    className="activation-dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabIndex="-1"
  >
    <div
      className="dropdown-item-text activation-dropdown-header"
    >
      <h3
        className="mb-1"
      >
        Get started with Sourcegraph
      </h3>
      <p
        className="mb-0"
      >
        Welcome to Sourcegraph! Complete the steps below to finish setting up your instance.
      </p>
    </div>
    <div
      className="dropdown-divider"
      onClick={[Function]}
      tabIndex="-1"
    />
    <div
      className="activation-dropdown-item dropdown-item"
      onClick={[Function]}
    >
      <div
        data-tooltip="detail1"
        onClick={[Function]}
      >
        <button
          className="btn btn-link text-left w-100 p-0"
          type="button"
        >
          <div
            className="d-flex justify-content-between"
          >
            <span
              className="mr-2"
            >
              title1
            </span>
            <CheckboxBlankCircleIcon
              className="icon-inline text-muted"
            />
          </div>
        </button>
      </div>
    </div>
    <div
      className="activation-dropdown-item dropdown-item"
      onClick={[Function]}
    >
      <div
        data-tooltip="detail2"
        onClick={[Function]}
      >
        <a
          href="/some/url"
        >
          <div
            className="d-flex justify-content-between"
          >
            <span
              className="mr-2"
            >
              title2
            </span>
            <CheckboxBlankCircleIcon
              className="icon-inline text-muted"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActivationDropdown render 1/2 completed 1`] = `
<div
  className="activation-dropdown-button--hidden nav-link p-0 btn-group"
  onKeyDown={[Function]}
>
  <a
    aria-expanded={false}
    aria-haspopup={true}
    className=" activation-dropdown-button__animated-button bg-transparent d-flex align-items-center e2e-activation-nav-item-toggle nav-link"
    href="#"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    />
    Setup
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    />
    <span
      className="activation-dropdown-button__progress-bar-container"
    >
      <svg
        className="CircularProgressbar activation-dropdown-button__circular-progress-bar"
        style={Object {}}
        viewBox="0 0 100 100"
      >
        <path
          className="CircularProgressbar-trail"
          d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
          fillOpacity={0}
          strokeWidth={12}
          style={Object {}}
        />
        <path
          className="CircularProgressbar-path"
          d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
          fillOpacity={0}
          strokeWidth={12}
          style={
            Object {
              "strokeDasharray": "276.46015351590177px 276.46015351590177px",
              "strokeDashoffset": "0px",
            }
          }
        />
      </svg>
    </span>
  </a>
  <div
    aria-hidden={true}
    className="activation-dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabIndex="-1"
  >
    <div
      className="dropdown-item-text activation-dropdown-header"
    >
      <h3
        className="mb-1"
      >
        Get started with Sourcegraph
      </h3>
      <p
        className="mb-0"
      >
        Welcome to Sourcegraph! Complete the steps below to finish setting up your instance.
      </p>
    </div>
    <div
      className="dropdown-divider"
      onClick={[Function]}
      tabIndex="-1"
    />
    <div
      className="activation-dropdown-item dropdown-item"
      onClick={[Function]}
    >
      <div
        data-tooltip="detail1"
        onClick={[Function]}
      >
        <button
          className="btn btn-link text-left w-100 p-0"
          type="button"
        >
          <div
            className="d-flex justify-content-between"
          >
            <span
              className="mr-2"
            >
              title1
            </span>
            <CheckIcon
              className="icon-inline text-success"
            />
          </div>
        </button>
      </div>
    </div>
    <div
      className="activation-dropdown-item dropdown-item"
      onClick={[Function]}
    >
      <div
        data-tooltip="detail2"
        onClick={[Function]}
      >
        <a
          href="/some/url"
        >
          <div
            className="d-flex justify-content-between"
          >
            <span
              className="mr-2"
            >
              title2
            </span>
            <CheckboxBlankCircleIcon
              className="icon-inline text-muted"
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActivationDropdown render loading 1`] = `
<div
  className="activation-dropdown-button--hidden nav-link p-0 btn-group"
  onKeyDown={[Function]}
>
  <a
    aria-expanded={false}
    aria-haspopup={true}
    className=" activation-dropdown-button__animated-button bg-transparent d-flex align-items-center e2e-activation-nav-item-toggle nav-link"
    href="#"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    />
    Setup
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    />
    <span
      className="activation-dropdown-button__progress-bar-container"
    >
      <svg
        className="CircularProgressbar activation-dropdown-button__circular-progress-bar"
        style={Object {}}
        viewBox="0 0 100 100"
      >
        <path
          className="CircularProgressbar-trail"
          d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
          fillOpacity={0}
          strokeWidth={12}
          style={Object {}}
        />
        <path
          className="CircularProgressbar-path"
          d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
          fillOpacity={0}
          strokeWidth={12}
          style={
            Object {
              "strokeDasharray": "276.46015351590177px 276.46015351590177px",
              "strokeDashoffset": "276.46015351590177px",
            }
          }
        />
      </svg>
    </span>
  </a>
  <div
    aria-hidden={true}
    className="activation-dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabIndex="-1"
  >
    <div
      className="dropdown-item-text activation-dropdown-header"
    >
      <h3
        className="mb-1"
      >
        Get started with Sourcegraph
      </h3>
      <p
        className="mb-0"
      >
        Welcome to Sourcegraph! Complete the steps below to finish setting up your instance.
      </p>
    </div>
    <div
      className="dropdown-divider"
      onClick={[Function]}
      tabIndex="-1"
    />
    <div
      className="activation-dropdown-button__loader"
    >
      <div
        className="loading-spinner icon-inline"
      />
    </div>
  </div>
</div>
`;
